src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>DR_Executive_Approval__c</fullName>
        <description>Help Text displayed on the Deal Reg page for partner entry into this field</description>
        <inlineHelpText>Does the work have executive approval?</inlineHelpText>
        <label>DR Executive Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Yes - Has Executive Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No - No Executive Approval</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DR_Existing_Client__c</fullName>
        <description>Help Text displayed on the Deal Reg page for partner entry into this field</description>
        <inlineHelpText>Is the company an existing client to your group?</inlineHelpText>
        <label>DR Existing Client</label>
        <picklist>
            <picklistValues>
                <fullName>Yes - Current Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No - New Client</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DR_Number_of_Agents__c</fullName>
        <description>Help Text displayed on the Deal Reg page for partner entry into this field</description>
        <inlineHelpText>Approximate number of agents/servers?</inlineHelpText>
        <label>DR Number of Agents</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DR_Primary_APM_Solution__c</fullName>
        <description>Help Text displayed on the Deal Reg page for partner entry into this field</description>
        <inlineHelpText>What is the client’s current primary APM solution product?</inlineHelpText>
        <label>DR Primary APM Solution</label>
        <picklist>
            <picklistValues>
                <fullName>Amberpoint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BlueStripe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA/Wily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compuware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dynatrace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM Tivoli</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netuitive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Relic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NONE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OpNet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OpScope</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OpTier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Precise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quest-FogLight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DR_Primary_Competitor__c</fullName>
        <label>DR Primary Competitor</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA Wily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compuware dynaTrace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM ITCAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM WebSphere</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft AVIcode</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Relic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OpNet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OpTier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Precise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quest Foglight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RightScale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tivoli</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tracelytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BlueStripe</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DR_Products_Pursing__c</fullName>
        <description>Help Text displayed on the Deal Reg page for partner entry into this field</description>
        <inlineHelpText>What product(s) is the client pursuing?</inlineHelpText>
        <label>DR Products Pursing</label>
        <picklist>
            <picklistValues>
                <fullName>.NET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Database</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dedicated SAAS Controller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Java</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Machine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile/EUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net App</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Node.js</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web End User</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>DR_State_Province__c</fullName>
        <description>State/Province in which the prospect resides. Populated when the company is not found in the D&amp;B search.</description>
        <label>DR State/Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DR_Title__c</fullName>
        <description>Title of customer primary contact. Populated when the company is not found in the D&amp;B search.</description>
        <label>DR Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DR_Zip__c</fullName>
        <description>Zip at which the prospect resides. Populated when the company is not found in the D&amp;B search.</description>
        <label>DR Zip</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSE__MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSE__OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Database__c</fullName>
        <description>Select the databases for the opportunity. If other is selected, specify which database in the notes.</description>
        <inlineHelpText>Select the databases for the opportunity. If other is selected, specify which database in the notes.</inlineHelpText>
        <label>Database</label>
        <picklist>
            <picklistValues>
                <fullName>MySQL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft SQL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DB2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sybase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Days_Left_Until_Expired__c</fullName>
        <formula>if(ISNULL(Registration_Expiration_Date__c),0, if(Registration_Expiration_Date__c- TODAY() &gt;0, Registration_Expiration_Date__c - TODAY(),0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Left Until Expired</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_Approved_Date__c</fullName>
        <label>Deal Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_ID__c</fullName>
        <description>Deal Registration ID</description>
        <label>Deal ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Reg_Number__c</fullName>
        <displayFormat>DR-{0000000}</displayFormat>
        <label>Deal Reg Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Deal_Source__c</fullName>
        <label>Deal Source</label>
        <picklist>
            <picklistValues>
                <fullName>Deal Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deal_Stage__c</fullName>
        <label>Deal Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Suspect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Identified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agreed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed-Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed-Lost</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deal_Type__c</fullName>
        <label>Deal Type</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal - Subscription</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal - Perpetual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expansion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Growth - (Co-Term)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Decision_Criteria_Notes_MEDDICC__c</fullName>
        <label>Decision Criteria Notes (MEDDICC)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Decision_Process_MEDDICC__c</fullName>
        <label>Decision Process (MEDDICC)</label>
        <picklist>
            <picklistValues>
                <fullName>Legal, procurement and EB reviews and signs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal, procurement and Champion can sign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Has to go to board for approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Has to go to CEO for approval</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Decision_Process_Notes_MEDDICC__c</fullName>
        <label>Decision Process Notes (MEDDICC)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deliver_CD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deliver CD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <inlineHelpText>The department you are working with on this opportunity</inlineHelpText>
        <label>Department</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deployment_Complete__c</fullName>
        <description>The date on which the deployment has been completed</description>
        <inlineHelpText>Enter the date on which the deployment was completed.</inlineHelpText>
        <label>Deployment Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deployment_Detail_Line_Items__c</fullName>
        <description>This field is used to count the Deployment Details on the Opportunity and is used in a validation rule to enforce the user to enter upon moving to Stage W10.</description>
        <label>Deployment Detail Line Items</label>
        <summaryForeignKey>Deployment_Detail__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Deployment_Option__c</fullName>
        <inlineHelpText>Please select the deployment option for this customer.</inlineHelpText>
        <label>Deployment Option</label>
        <picklist>
            <picklistValues>
                <fullName>On-Premise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saas-Shared Controller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saas-Dedicated Controller (additional cost)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deployment_Status__c</fullName>
        <label>Deployment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Does_customer_require_a_Purchase_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Does customer require a Purchase Order?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ESDR_Tasks_Set__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ESDR Tasks Set</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Economic_Buyer_MEDDICC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Economic Buyer (MEDDICC)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Economic Buyer (MEDDIC))</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Enablement_Hours_Remaining__c</fullName>
        <label>Enablement Hours Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Close_Date__c</fullName>
        <label>Estimated Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eval_Complete__c</fullName>
        <inlineHelpText>Enter the date the Eval completed.</inlineHelpText>
        <label>Eval Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eval_Start__c</fullName>
        <inlineHelpText>Date the Eval or POC started</inlineHelpText>
        <label>Eval Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Evaluation_Type__c</fullName>
        <inlineHelpText>Enter On-Premise or Hosted (SAAS) controller.</inlineHelpText>
        <label>Evaluation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Hosted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-Premise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SaaS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Existing_APM__c</fullName>
        <description>Existing APM solutions being used</description>
        <inlineHelpText>Select the existing APM solution if present. If other, add specifics in notes.</inlineHelpText>
        <label>Existing APM</label>
        <picklist>
            <picklistValues>
                <fullName>Amberpoint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AppDynamics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BlueStripe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA/Wily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compuware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dynatrace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM Tivoli</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netuitive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Relic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NONE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OpNet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OpScope</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OpTier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Precise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quest- FogLight</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Existing_Mgt_Vendors__c</fullName>
        <description>Existing system management platforms</description>
        <inlineHelpText>Enter existing system management platform is one exists.</inlineHelpText>
        <label>Existing Mgt Vendors</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP-OVO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tivoli</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle EM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compuware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nagios</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZenOss</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Admin_CMArchive__c</fullName>
        <description>Administrative field containing an archive of the originating campaign member</description>
        <inlineHelpText>Full Circle CRM Administrative field that stores an archive of the originating campaign member.</inlineHelpText>
        <label>Admin_CMArchive</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Admin_Originating_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links to the originating contact for this opportunity</description>
        <inlineHelpText>Full Circle CRM Administrative field that stores an archive of the originating contact.</inlineHelpText>
        <label>Admin_Originating_Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Originated Opportunities</relationshipLabel>
        <relationshipName>Admin_Created_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Admin_Update_Counter__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This counter is changed any time this object is updated by the response management system.</description>
        <inlineHelpText>This counter is changed any time this object is updated by the response management system.</inlineHelpText>
        <label>Admin Update Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Campaign_Attribution__c</fullName>
        <description>Opportunity Campaign Attribution</description>
        <formula>IF( ISBLANK( Campaign.Id), &quot;Undefined&quot;,
TEXT(Campaign.FCRM__FCR_Campaign_Sourced_By__c))</formula>
        <inlineHelpText>Opportunity Campaign Attribution</inlineHelpText>
        <label>Campaign Attribution</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_First_Campaign_Touch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A reference to the first campaign (based on first responded date of responses for the contact if it has an active response). Set during opportunity create</description>
        <label>First Campaign Touch</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>First Touch Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Last_Campaign_Touch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A reference to the last campaign (based on first responded date of responses for the contact if it has an active response). Set during opportunity create</description>
        <label>Last Campaign Touch</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Last Touch Opportunities</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Response_ID__c</fullName>
        <description>ID of the active response when this opportunity was created</description>
        <label>Response ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSR_ID__c</fullName>
        <formula>BLANKVALUE(FSR__c,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FSR ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSR_Not_Required_On_Opp__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if there will not be an FSR on the opportunity</description>
        <inlineHelpText>Check this box if there will not be an FSR on the opportunity</inlineHelpText>
        <label>FSR Not Required On Opp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FSR</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>AppD FSR</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>AppD Channel Programs Manager</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>FSR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Federal_Distributor_Margin_Amount__c</fullName>
        <formula>SyncedQuote.Federal_Distributor_Margin_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Federal Distributor Margin Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Financed_Rate__c</fullName>
        <label>Financed Rate</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Financing_Amount__c</fullName>
        <description>The amount to deduct as a finance charge from the Amount field</description>
        <inlineHelpText>Enter the amount of the finance charge.</inlineHelpText>
        <label>Financing Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Financing_Partner__c</fullName>
        <label>Financing Partner</label>
        <picklist>
            <picklistValues>
                <fullName>Central Technology Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TechXtend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western Equipment Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SHI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ePlus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balboa Capital</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>First_meeting_set_by__c</fullName>
        <label>First meeting set by</label>
        <picklist>
            <picklistValues>
                <fullName>Alec Short</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phil Evans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Robert Jweinat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lee Weinberg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tom Reksten</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joel Fortune</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>David Lam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Randy Boysen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frank Swain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marc Ownbey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mark Majeski</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joel Brown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michael Nelson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scott Wilson</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fully_Deployed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is to track if new customers have fully deployed AppDynamics in their environment</description>
        <inlineHelpText>Check this box if new customers have fully deployed AppDynamics in their environment.</inlineHelpText>
        <label>Fully Deployed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Generate_Estimate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate Estimate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Generate_Sales_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate Sales Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Geo__c</fullName>
        <label>Geo</label>
        <picklist>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Worldwide</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Greater_than_100K_Call_Completion_Date__c</fullName>
        <description>For opportunities &gt;$100K, there needs to be a meeting including the Sales Engineer, Customer Success Manager and the Customer. This field records the date that the meeting occurred.</description>
        <inlineHelpText>Please enter the date of this meeting after the completion of the meeting.</inlineHelpText>
        <label>Greater than $100K Call Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gross_Total_Price__c</fullName>
        <formula>IF( 

SyncedQuote.Id = &quot;&quot;, Amount,

SyncedQuote.Gross_Total_Price__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Handed_off_to_Customer_Success__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SE checks this off after deploying and configuring 50% of the customer&apos;s agents post purchase.</description>
        <label>Pass to Customer Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Handraiser_Form__c</fullName>
        <label>Handraiser Form</label>
        <picklist>
            <picklistValues>
                <fullName>.NET Trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30-Day Trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Us</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domestic Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUM Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Held_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Held Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hidden_Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hold_license_delivery_for_payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hold license delivery for payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>How_did_they_find_us__c</fullName>
        <externalId>true</externalId>
        <label>How did they find us?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>